@@ -20,6 +20,7 @@ git - ?
 	- Display number of unread posts in "My messages" (instead of total threads)
 	- Optimized dbUserGet (mostly for the user list)
 	- All languages are listed on /r and /v/all instead of only those in use
+	- Copy over search query when switching search type (htmlSearchBox)
 
 2.7 - 2009-09-24
 	- Improved styling of the threeboxes layout
